advanced on data cleaning

--- a/portfolio_project/airbnb_data.ipynb
+++ b/portfolio_project/airbnb_data.ipynb
@@ -20,7 +20,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_22457/1125398166.py:1: DtypeWarning: Columns (25) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_983/1125398166.py:1: DtypeWarning: Columns (25) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv('./data/Airbnb_Open_Data.csv')\n"
      ]
     },
@@ -913,6 +913,75 @@
    "source": [
     "df['neighbourhood group'].replace({'brookln': 'Brooklyn', 'manhatan': 'Manhattan'}, inplace=True)\n",
     "df['neighbourhood group'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id', 'NAME', 'host id', 'host_identity_verified', 'host name',\n",
+       "       'neighbourhood group', 'neighbourhood', 'lat', 'long', 'country',\n",
+       "       'country code', 'instant_bookable', 'cancellation_policy', 'room type',\n",
+       "       'Construction year', 'price', 'service fee', 'minimum nights',\n",
+       "       'number of reviews', 'last review', 'reviews per month',\n",
+       "       'review rate number', 'calculated host listings count',\n",
+       "       'availability 365', 'house_rules', 'license'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.rename(columns={'host id': 'host_id', 'NAME': 'name', 'host name': 'host_name', 'neighbourhood group': 'neighbourhood_group',\n",
+    "          'country code': 'country_code', 'room type': 'room_type',\n",
+    "          'Construction year': 'construction_year', 'service fee': 'service_fee',\n",
+    "          'minimum nights': 'minimum_nights', 'number of reviews': 'number_of_reviews',\n",
+    "          'last review': 'last_review', 'reviews per month': 'reviews_per_month',\n",
+    "          'review rate number': 'review_rate_number',\n",
+    "          'calculated host listings count': 'calculated_host_listings_count',\n",
+    "          'availability 365': 'availability_365'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ref = df[['neighbourhood_group', 'neighbourhood']].dropna().drop_duplicates()\n",
+    "reference = {}\n",
+    "for k, v in zip(df_ref.neighbourhood, df_ref.neighbourhood_group):\n",
+    "    reference[k] = v\n",
+    "\n",
+    "df['neighbourhood_group'] = df.neighbourhood.apply(lambda x: reference[x])\n",
+    "df['neighbourhood_group'].isna().sum()"
    ]
   },
   {
