--- a/portfolio_project/airbnb_data.ipynb
+++ b/portfolio_project/airbnb_data.ipynb
@@ -20,7 +20,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_983/1125398166.py:1: DtypeWarning: Columns (25) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_1844/1125398166.py:1: DtypeWarning: Columns (25) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv('./data/Airbnb_Open_Data.csv')\n"
      ]
     },
@@ -777,7 +777,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data Cleaning"
+    "## Data Cleaning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create usable DataFrame\n",
+    "\n",
+    "Some of the columns of this DataFrame are of no use for us to conduct the analysis so let's start with removing those first."
    ]
   },
   {
@@ -786,38 +795,99 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 102599 entries, 0 to 102598\n",
+      "Data columns (total 26 columns):\n",
+      " #   Column                          Non-Null Count   Dtype  \n",
+      "---  ------                          --------------   -----  \n",
+      " 0   id                              102599 non-null  int64  \n",
+      " 1   NAME                            102349 non-null  object \n",
+      " 2   host id                         102599 non-null  int64  \n",
+      " 3   host_identity_verified          102310 non-null  object \n",
+      " 4   host name                       102193 non-null  object \n",
+      " 5   neighbourhood group             102570 non-null  object \n",
+      " 6   neighbourhood                   102583 non-null  object \n",
+      " 7   lat                             102591 non-null  float64\n",
+      " 8   long                            102591 non-null  float64\n",
+      " 9   country                         102067 non-null  object \n",
+      " 10  country code                    102468 non-null  object \n",
+      " 11  instant_bookable                102494 non-null  object \n",
+      " 12  cancellation_policy             102523 non-null  object \n",
+      " 13  room type                       102599 non-null  object \n",
+      " 14  Construction year               102385 non-null  float64\n",
+      " 15  price                           102352 non-null  object \n",
+      " 16  service fee                     102326 non-null  object \n",
+      " 17  minimum nights                  102190 non-null  float64\n",
+      " 18  number of reviews               102416 non-null  float64\n",
+      " 19  last review                     86706 non-null   object \n",
+      " 20  reviews per month               86720 non-null   float64\n",
+      " 21  review rate number              102273 non-null  float64\n",
+      " 22  calculated host listings count  102280 non-null  float64\n",
+      " 23  availability 365                102151 non-null  float64\n",
+      " 24  house_rules                     50468 non-null   object \n",
+      " 25  license                         2 non-null       object \n",
+      "dtypes: float64(9), int64(2), object(15)\n",
+      "memory usage: 20.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(columns=['NAME', 'host id', 'host name', 'lat', 'long', 'country code', 'last review', 'reviews per month', 'calculated host listings count', 'house_rules', 'license'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.rename(columns={'neighbourhood group': 'neighbourhood_group',\n",
+    "          'country code': 'country_code', 'room type': 'room_type',\n",
+    "          'Construction year': 'construction_year', 'service fee': 'service_fee',\n",
+    "          'minimum nights': 'minimum_nights', 'number of reviews': 'number_of_reviews',\n",
+    "          'last review': 'last_review', 'review rate number': 'review_rate_number',\n",
+    "          'availability 365': 'availability_365'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "id                                     0\n",
-       "NAME                                 250\n",
-       "host id                                0\n",
-       "host_identity_verified               289\n",
-       "host name                            406\n",
-       "neighbourhood group                   29\n",
-       "neighbourhood                         16\n",
-       "lat                                    8\n",
-       "long                                   8\n",
-       "country                              532\n",
-       "country code                         131\n",
-       "instant_bookable                     105\n",
-       "cancellation_policy                   76\n",
-       "room type                              0\n",
-       "Construction year                    214\n",
-       "price                                247\n",
-       "service fee                          273\n",
-       "minimum nights                       409\n",
-       "number of reviews                    183\n",
-       "last review                        15893\n",
-       "reviews per month                  15879\n",
-       "review rate number                   326\n",
-       "calculated host listings count       319\n",
-       "availability 365                     448\n",
-       "house_rules                        52131\n",
-       "license                           102597\n",
+       "id                          0\n",
+       "host_identity_verified    289\n",
+       "neighbourhood_group        29\n",
+       "neighbourhood              16\n",
+       "country                   532\n",
+       "instant_bookable          105\n",
+       "cancellation_policy        76\n",
+       "room_type                   0\n",
+       "construction_year         214\n",
+       "price                     247\n",
+       "service_fee               273\n",
+       "minimum_nights            409\n",
+       "number_of_reviews         183\n",
+       "review_rate_number        326\n",
+       "availability_365          448\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +910,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,13 +932,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "neighbourhood group\n",
+       "neighbourhood_group\n",
        "Manhattan        43792\n",
        "Brooklyn         41842\n",
        "Queens           13267\n",
@@ -879,88 +949,45 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['neighbourhood group'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "neighbourhood group\n",
-       "Manhattan        43793\n",
-       "Brooklyn         41843\n",
-       "Queens           13267\n",
-       "Bronx             2712\n",
-       "Staten Island      955\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['neighbourhood group'].replace({'brookln': 'Brooklyn', 'manhatan': 'Manhattan'}, inplace=True)\n",
-    "df['neighbourhood group'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['id', 'NAME', 'host id', 'host_identity_verified', 'host name',\n",
-       "       'neighbourhood group', 'neighbourhood', 'lat', 'long', 'country',\n",
-       "       'country code', 'instant_bookable', 'cancellation_policy', 'room type',\n",
-       "       'Construction year', 'price', 'service fee', 'minimum nights',\n",
-       "       'number of reviews', 'last review', 'reviews per month',\n",
-       "       'review rate number', 'calculated host listings count',\n",
-       "       'availability 365', 'house_rules', 'license'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
+    "df['neighbourhood_group'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "neighbourhood_group\n",
+       "Manhattan        43814\n",
+       "Brooklyn         41848\n",
+       "Queens           13269\n",
+       "Bronx             2713\n",
+       "Staten Island      955\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df.rename(columns={'host id': 'host_id', 'NAME': 'name', 'host name': 'host_name', 'neighbourhood group': 'neighbourhood_group',\n",
-    "          'country code': 'country_code', 'room type': 'room_type',\n",
-    "          'Construction year': 'construction_year', 'service fee': 'service_fee',\n",
-    "          'minimum nights': 'minimum_nights', 'number of reviews': 'number_of_reviews',\n",
-    "          'last review': 'last_review', 'reviews per month': 'reviews_per_month',\n",
-    "          'review rate number': 'review_rate_number',\n",
-    "          'calculated host listings count': 'calculated_host_listings_count',\n",
-    "          'availability 365': 'availability_365'}, inplace=True)"
+    "df['neighbourhood_group'].replace({'brookln': 'Brooklyn', 'manhatan': 'Manhattan'}, inplace=True)\n",
+    "df['neighbourhood_group'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +996,7 @@
        "0"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -986,10 +1013,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23544"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.availability_365.eq(0).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# La siguiente linea de codigo elimina todos las filas cuyas propiedas\n",
+    "# se encuentren sin disponibilidad por el siguiente año. Se asume que \n",
+    "# estas propiedades no se encuentran alquiladas sino que fueron \n",
+    "# deshabilitadas para evitar su alquiler.\n",
+    "# Esto elimina muchas lineas, debe considerarse si afecta al analisis.\n",
+    "\n",
+    "# df = df.loc[df['availability_365'] > 0]"
+   ]
   }
  ],
  "metadata": {
