--- a/portfolio_project/airbnb_data.ipynb
+++ b/portfolio_project/airbnb_data.ipynb
@@ -20,7 +20,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1844/1125398166.py:1: DtypeWarning: Columns (25) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_5878/1125398166.py:1: DtypeWarning: Columns (25) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv('./data/Airbnb_Open_Data.csv')\n"
      ]
     },
@@ -793,63 +793,21 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 102599 entries, 0 to 102598\n",
-      "Data columns (total 26 columns):\n",
-      " #   Column                          Non-Null Count   Dtype  \n",
-      "---  ------                          --------------   -----  \n",
-      " 0   id                              102599 non-null  int64  \n",
-      " 1   NAME                            102349 non-null  object \n",
-      " 2   host id                         102599 non-null  int64  \n",
-      " 3   host_identity_verified          102310 non-null  object \n",
-      " 4   host name                       102193 non-null  object \n",
-      " 5   neighbourhood group             102570 non-null  object \n",
-      " 6   neighbourhood                   102583 non-null  object \n",
-      " 7   lat                             102591 non-null  float64\n",
-      " 8   long                            102591 non-null  float64\n",
-      " 9   country                         102067 non-null  object \n",
-      " 10  country code                    102468 non-null  object \n",
-      " 11  instant_bookable                102494 non-null  object \n",
-      " 12  cancellation_policy             102523 non-null  object \n",
-      " 13  room type                       102599 non-null  object \n",
-      " 14  Construction year               102385 non-null  float64\n",
-      " 15  price                           102352 non-null  object \n",
-      " 16  service fee                     102326 non-null  object \n",
-      " 17  minimum nights                  102190 non-null  float64\n",
-      " 18  number of reviews               102416 non-null  float64\n",
-      " 19  last review                     86706 non-null   object \n",
-      " 20  reviews per month               86720 non-null   float64\n",
-      " 21  review rate number              102273 non-null  float64\n",
-      " 22  calculated host listings count  102280 non-null  float64\n",
-      " 23  availability 365                102151 non-null  float64\n",
-      " 24  house_rules                     50468 non-null   object \n",
-      " 25  license                         2 non-null       object \n",
-      "dtypes: float64(9), int64(2), object(15)\n",
-      "memory usage: 20.4+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
    "outputs": [],
    "source": [
     "df = df.drop(columns=['NAME', 'host id', 'host name', 'lat', 'long', 'country code', 'last review', 'reviews per month', 'calculated host listings count', 'house_rules', 'license'])"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then, let's remove the spaces from the columns names."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,8 +820,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Dealing with NaN values\n",
+    "\n",
+    "This DataFrame is filled with `NaN` values so we'll deal with some of those that might affect future analysis. Some will remain as `NaN` which will be turn into `NULL` when migrated to MariaDB. Those that remain won't affect analysis and even might serve to answer different questions."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +854,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +877,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -921,18 +888,124 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "country\n",
+       "United States    102067\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['country'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('O')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df['host_identity_verified'].fillna('unconfirmed', inplace=True)\n",
-    "df['country'].fillna('United States', inplace=True)\n",
-    "df['neighbourhood'].fillna('unspecified', inplace=True)"
+    "df['instant_bookable'].dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cancellation_policy\n",
+       "moderate    34343\n",
+       "strict      34106\n",
+       "flexible    34074\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['cancellation_policy'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['host_identity_verified'].fillna('unconfirmed', inplace=True)\n",
+    "df['country'].fillna('United States', inplace=True)\n",
+    "df['neighbourhood'].fillna('unspecified', inplace=True)\n",
+    "df['instant_bookable'].astype('bool')\n",
+    "df['instant_bookable'].fillna(False, inplace=True)\n",
+    "df['cancellation_policy'].fillna('unspecified', inplace=True)\n",
+    "df['number_of_reviews'].fillna(0, inplace=True)\n",
+    "df['availability_365'].fillna(0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                          0\n",
+       "host_identity_verified      0\n",
+       "neighbourhood_group        29\n",
+       "neighbourhood               0\n",
+       "country                     0\n",
+       "instant_bookable            0\n",
+       "cancellation_policy         0\n",
+       "room_type                   0\n",
+       "construction_year         214\n",
+       "price                     247\n",
+       "service_fee               273\n",
+       "minimum_nights            409\n",
+       "number_of_reviews           0\n",
+       "review_rate_number        326\n",
+       "availability_365            0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +1022,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -967,10 +1040,10 @@
      "data": {
       "text/plain": [
        "neighbourhood_group\n",
-       "Manhattan        43814\n",
-       "Brooklyn         41848\n",
-       "Queens           13269\n",
-       "Bronx             2713\n",
+       "Manhattan        43793\n",
+       "Brooklyn         41843\n",
+       "Queens           13267\n",
+       "Bronx             2712\n",
        "Staten Island      955\n",
        "Name: count, dtype: int64"
       ]
@@ -1004,8 +1077,8 @@
    "source": [
     "df_ref = df[['neighbourhood_group', 'neighbourhood']].dropna().drop_duplicates()\n",
     "reference = {}\n",
-    "for k, v in zip(df_ref.neighbourhood, df_ref.neighbourhood_group):\n",
-    "    reference[k] = v\n",
+    "for key, value in zip(df_ref.neighbourhood, df_ref.neighbourhood_group):\n",
+    "    reference[key] = value\n",
     "\n",
     "df['neighbourhood_group'] = df.neighbourhood.apply(lambda x: reference[x])\n",
     "df['neighbourhood_group'].isna().sum()"
@@ -1019,7 +1092,7 @@
     {
      "data": {
       "text/plain": [
-       "23544"
+       "23992"
       ]
      },
      "execution_count": 18,
@@ -1033,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
