--- a/portfolio_project/airbnb_data.ipynb
+++ b/portfolio_project/airbnb_data.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import mariadb"
+    "import sqlalchemy"
    ]
   },
   {
@@ -20,7 +20,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5878/1125398166.py:1: DtypeWarning: Columns (25) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_14186/1125398166.py:1: DtypeWarning: Columns (25) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv('./data/Airbnb_Open_Data.csv')\n"
      ]
     },
@@ -802,7 +802,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then, let's remove the spaces from the columns names."
+    "Then, let's remove the spaces from the column names."
    ]
   },
   {
@@ -811,12 +811,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.rename(columns={'neighbourhood group': 'neighbourhood_group',\n",
-    "          'country code': 'country_code', 'room type': 'room_type',\n",
-    "          'Construction year': 'construction_year', 'service fee': 'service_fee',\n",
-    "          'minimum nights': 'minimum_nights', 'number of reviews': 'number_of_reviews',\n",
-    "          'last review': 'last_review', 'review rate number': 'review_rate_number',\n",
-    "          'availability 365': 'availability_365'}, inplace=True)"
+    "df.columns = df.columns.str.replace(' ', '_')"
    ]
   },
   {
@@ -844,7 +839,7 @@
        "instant_bookable          105\n",
        "cancellation_policy        76\n",
        "room_type                   0\n",
-       "construction_year         214\n",
+       "Construction_year         214\n",
        "price                     247\n",
        "service_fee               273\n",
        "minimum_nights            409\n",
@@ -956,6 +951,29 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "instant_bookable\n",
+       "False    51474\n",
+       "True     51020\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['instant_bookable'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "df['host_identity_verified'].fillna('unconfirmed', inplace=True)\n",
@@ -969,38 +987,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "id                          0\n",
-       "host_identity_verified      0\n",
-       "neighbourhood_group        29\n",
-       "neighbourhood               0\n",
-       "country                     0\n",
-       "instant_bookable            0\n",
-       "cancellation_policy         0\n",
-       "room_type                   0\n",
-       "construction_year         214\n",
-       "price                     247\n",
-       "service_fee               273\n",
-       "minimum_nights            409\n",
-       "number_of_reviews           0\n",
-       "review_rate_number        326\n",
-       "availability_365            0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df.isna().sum()"
+    "The logic behind the dealing with this `NaN` values was to keep the more natural logic for each column. The only exception being the `instant_bookable` column, formerly a string column, which was turned into a boolean column, since it only counted with `True` or `False` values. The null values were considered `False`.\n",
+    "\n",
+    "The `neighbourhood_group` column requires special treatment, since we have the `neighbourhood` column we can build a dictionary to correlate each neighbourhood with its respective area."
    ]
   },
   {
@@ -1117,6 +1109,33 @@
     "# Esto elimina muchas lineas, debe considerarse si afecta al analisis.\n",
     "\n",
     "# df = df.loc[df['availability_365'] > 0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DataFrame migration to MariaDB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# engine = sqlalchemy.create_engine('mariadb+mariadbconnector://david:1234@127.0.0.1:3306/AirbnbData')\n",
+    "\n",
+    "# df.to_sql('NY_rentals', engine, if_exists='replace')\n",
+    "\n",
+    "# REVISAR"
    ]
   }
  ],
